# strusVector

./: .gitignore  CHANGELOG  CMakeLists.txt  GLOSSARY  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  README  README.md  TODO
.Attic/: findClosestSimGroup.txt  simGroupMap__blocks.cpp  simGroupMap__blocks.hpp  utils.cpp  utils.hpp
.Attic/oldvec/src/: CMakeLists.txt  dependencyGraph.cpp  genGroupContext.hpp  genModel.hpp  sampleSimGroupAssignmentQueue.cpp  sampleSimGroupMap.hpp  simGroupMap.cpp  simGroupMap.hpp  simHashMap.cpp  simHashMap.hpp  simRelationMap.cpp  simRelationMap.hpp  simRelationMapBuilder.hpp  sparseDim2Field.hpp  vectorStorageBuilder.cpp  vectorStorageBuilder.hpp  vectorStorageSearch.cpp  vectorStorageSearch.hpp
cmake/: build_rules.cmake  find_armadillo.cmake  intl.cmake  link_rules.cmake
doc/: doxygen.conf
doc/doxygen/html/: dir_4c7fe52541d540b59710786f705b50e0.html  dir_a73361def35442ed7e38ef668dbae29f.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  index.hhc  index.hhk  index.hhp  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacestrus.html  strus_8md.html  vector__std_8hpp.html  vector__std_8hpp_source.html  versionVector_8hpp.html  versionVector_8hpp_source.html
doc/doxygen_include/: strus.md
include/strus/: versionVector.hpp  versionVector.hpp.in
include/strus/lib/: vector_std.hpp  vectorspace_std.hpp
src/: CMakeLists.txt  armautils.cpp  armautils.hpp  cacheLineSize.hpp  databaseAdapter.cpp  databaseAdapter.hpp  databaseHelpers.hpp  dependencyGraph.cpp  dependencyGraph.hpp  errorUtils.hpp  genGroupContext.cpp  genGroupContext.hpp  genGroupThreadContext.cpp  genGroupThreadContext.hpp  genModel.cpp  genModel.hpp  genModel.old.cpp  getSimRelationMap.cpp  getSimRelationMap.hpp  getSimhashValues.cpp  getSimhashValues.hpp  indexListMap.hpp  internationalization.cpp  intrusiveVector.hpp  libstrus_vector_std.cpp  libstrus_vectorspace_std.cpp  logger.cpp  logger.hpp  lshBench.cpp  lshBench.hpp  lshModel.cpp  lshModel.hpp  modstrus_storage_vector_std.cpp  modstrus_storage_vectorspace.cpp  modstrus_storage_vectorspace_std.cpp  random.cpp  random.hpp  rankList.hpp  sampleSimGroupAssignmentQueue.cpp  sampleSimGroupAssignmentQueue.hpp  (+64 more)
src_pagerank/: CMakeLists.txt  pagerank.cpp  pagerank.hpp  strusPageRank.cpp
src_pageweight/: CMakeLists.txt  pageweight.cpp  pageweight.hpp  pageweightdefs.hpp  pageweightdefs.hpp.in  strusPageWeight.cpp
tests/: CMakeLists.txt
tests/armadillo/: CMakeLists.txt
tests/armadillo/src/: CMakeLists.txt  testArmadillo.cpp
tests/database/: CMakeLists.txt
tests/database/src/: CMakeLists.txt  testDatabaseAdapter.cpp
tests/pagerank/: CMakeLists.txt
tests/pagerank/src/: CMakeLists.txt  testPageRank.cpp
tests/sentenceLexer/: CMakeLists.txt
tests/sentenceLexer/src/: CMakeLists.txt  testSentenceLexer.cpp
tests/utils/: CMakeLists.txt  vectorUtils.cpp  vectorUtils.hpp
tests/vectorSpaceModel/: CMakeLists.txt  test.cfg
tests/vectorSpaceModel/src/: CMakeLists.txt  run.sh  testLshSimHash.cpp  testLshVectorSpaceModel.cpp  testVectorSpaceModel.cpp  testVectorStorageInterface.cpp
